@@ -47,6 +47,8 @@ class EditableField extends Editable
             throw new CException('Parameter "attribute" should be provided for EditableField');
         }
 
+        $originalModel = $this->model;
+        $originalAttribute = $this->attribute;
         $originalText = strlen($this->text) ? $this->text : CHtml::value($this->model, $this->attribute);
 
         //if apply set manually to false --> just render text, no js plugin applied
@@ -56,54 +58,34 @@ class EditableField extends Editable
             $this->apply = true;
         }
 
-        //attribute contains dot: related model, trying to resolve
-        $explode = explode('.', $this->attribute);
-        $len = count($explode);
-        if($len > 1) {
-            $this->attribute = $explode[$len-1];
-            //try to resolve model instance  
-            $model = $this->model;
-            $resolved = true;
-            for($i = 0; $i < $len-1; $i++) {
-                $name = $explode[$i];
-                if($model->$name instanceof CActiveRecord) {
-                    $model = $model->$name;
-                } else {
-                    //related model not exist! Render text only.
-                    $this->apply = false;
-                    $resolved = false;
-                    $this->text = $originalText;
-                    break;
-                }
-            }
-            
-            if($resolved) {
-                $this->staticModel = $model;
-                $this->model = $model;
-            } else {
-                $relationName = $explode[$len-2];
-                $className = $this->model->getActiveRelation($relationName)->className;
-                $this->staticModel = new $className();
-                $this->model = null;                
-            }
-        } else {
-            $this->staticModel = $this->model;  
-        }
-
+        //try to resolve related model (if attribute contains '.')
+        $resolved = $this->resolveModels($this->model, $this->attribute);
+        $this->model = $resolved['model'];
+        $this->attribute = $resolved['attribute'];
+        $staticModel = $resolved['staticModel'];
+        $isMongo = $resolved['isMongo'];
+        
+        //if real (related) model not exists --> just print text
+        if(!$this->model) {
+        	$this->apply = false;
+        	$this->text = $originalText;
+		}
+        
+        
         //for security reason only safe attributes can be editable (e.g. defined in rules of model)
         //just print text (see 'run' method)
-        if (!$this->staticModel->isAttributeSafe($this->attribute)) {
+        if (!$staticModel->isAttributeSafe($this->attribute)) {
             $this->apply = false;
             $this->text = $originalText;
         }
-
+        
         /*
          try to detect type from metadata if not set
         */
         if ($this->type === null) {
             $this->type = 'text';
-            if (array_key_exists($this->attribute, $this->staticModel->tableSchema->columns)) {
-                $dbType = $this->staticModel->tableSchema->columns[$this->attribute]->dbType;
+            if (!$isMongo && array_key_exists($this->attribute, $staticModel->tableSchema->columns)) {
+                $dbType = $staticModel->tableSchema->columns[$this->attribute]->dbType;
                 if($dbType == 'date') {
                     $this->type = 'date';
                 }
@@ -118,13 +100,14 @@ class EditableField extends Editable
 
         //name
         if(empty($this->name)) {
-            $this->name = $this->attribute;
+            $this->name = $isMongo ? $originalAttribute : $this->attribute;
         }
         
-        //pk
-        if($this->model && !$this->model->isNewRecord) {
-            $this->pk = $this->model->primaryKey;
-        }        
+        //pk (for mongo takes pk from parent!)
+        $pkModel = $isMongo ? $originalModel : $this->model; 
+        if($pkModel && !$pkModel->isNewRecord) {
+            $this->pk = $pkModel->primaryKey;
+        }       
         
         parent::init();        
         
@@ -139,7 +122,7 @@ class EditableField extends Editable
         
         //set value directly for autotext generation
         if($this->model && $this->_prepareToAutotext) {
-            $this->value = $this->model->getAttribute($this->attribute); 
+            $this->value = CHtml::value($this->model, $this->attribute); 
         }
         
         //generate title from attribute label
@@ -154,14 +137,14 @@ class EditableField extends Editable
                    $title = Yii::t('EditableField.editable', $t);
                 }
             }
-            $this->title = $title . ' ' . $this->staticModel->getAttributeLabel($this->attribute);
+            $this->title = $title . ' ' . $staticModel->getAttributeLabel($this->attribute);
         } else {
-            $this->title = strtr($this->title, array('{label}' => $this->staticModel->getAttributeLabel($this->attribute)));
+            $this->title = strtr($this->title, array('{label}' => $staticModel->getAttributeLabel($this->attribute)));
         }
         
         //scenario
-        if($this->model && !isset($this->params['scenario'])) {
-            $this->params['scenario'] = $this->model->getScenario(); 
+        if($pkModel && !isset($this->params['scenario'])) {
+            $this->params['scenario'] = $pkModel->getScenario(); 
         }        
     }
 
@@ -169,4 +152,81 @@ class EditableField extends Editable
     {
         return str_replace('\\', '_', get_class($this->staticModel)).'_'.parent::getSelector();
     }
+    
+    
+    /**
+    * Checks is model is instance of mongo model
+    * 
+    * @param mixed $model
+    * @return bool
+    */
+    public static function isMongo($model) 
+    {
+    	return class_exists('EMongoEmbeddedDocument') && $model instanceof EMongoEmbeddedDocument;
+	}
+	
+    /**
+    * Resolves model and returns array of values:
+    * - staticModel: static class of model, need for checki safety of attribute
+    * - real model: containing attribute. Can be null
+    * - attribute: it will be without dots for activerecords 
+    * 
+    * @param mixed $model
+    * @param mixed $attribute
+    */
+    public static function resolveModels($model, $attribute) 
+    {
+    	//attribute contains dot: related model, trying to resolve
+        $explode = explode('.', $attribute);
+        $len = count($explode);
+        
+        $isMongo = self::isMongo($model);
+		         		
+        if($len > 1) {
+            $attribute = $explode[$len-1];
+            //try to resolve model instance  
+            $resolved = true;
+            for($i = 0; $i < $len-1; $i++) {
+                $name = $explode[$i];
+                if($model->$name instanceof CModel) {
+                    $model = $model->$name;
+                } else {
+                    //related model not exist! Render text only.
+                    //$this->apply = false;
+                    $resolved = false;
+                    //$this->text = $originalText;
+                    break;
+                }
+            }
+            
+            if($resolved) {
+                $staticModel = $model;
+            } else { //related model not resolved: maybe not exists
+                $relationName = $explode[$len-2];
+                if($model instanceof CActiveRecord) {
+                    $className = $model->getActiveRelation($relationName)->className;
+				} elseif($isMongo) {
+					$embedded = $model->embeddedDocuments();
+					if(isset($embedded[$relationName])) {
+						$className = $embedded[$relationName];
+					} else {
+						throw new CException('Embedded relation not found');
+					}
+				} else {
+					throw new CException('Unsupported model class '.$relationName);
+				}
+                $staticModel = new $className();
+                $model = null;                
+            }
+        } else {
+            $staticModel = $model;  
+        }
+        
+        return array(
+        	'model' 		=> $model,
+        	'staticModel'   => $staticModel,
+        	'attribute'     => $attribute,
+        	'isMongo'       => $isMongo
+        );
+	}
 }
