@@ -3,6 +3,7 @@ X-editable-yii changelog
 
 Version 1.3.0  wip
 ----------------------------
+[enh] added mongoDB support (vitalets)
 [enh #48] scenario is taken dynamically from model and used in EditableSaver (vitalets)
 [enh #46] add `liveTarget` option to support live update in CListView (vitalets)
 
